# cli

./: CHANGELOG.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
.cursor/plans/: rc_cli_开发计划_b21bc588.plan.md
.github/workflows/: ci.yml  integration.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: alias.rs  cp.rs  diff.rs  find.rs  ls.rs  mirror.rs  mod.rs  mv.rs  quota.rs  rm.rs  share.rs  stat.rs  tag.rs  tree.rs  version.rs
crates/cli/src/commands/admin/: group.rs  mod.rs  policy.rs  service_account.rs  user.rs
crates/cli/src/output/: formatter.rs  mod.rs
crates/cli/tests/: golden.rs  integration.rs
crates/cli/tests/snapshots/: golden__alias_tests__alias_list_empty.snap  golden__alias_tests__alias_list_with_aliases.snap  golden__alias_tests__alias_remove_not_found.snap  golden__alias_tests__alias_remove_success.snap  golden__alias_tests__alias_set_success.snap
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  retry.rs  traits.rs
crates/core/src/admin/: mod.rs  types.rs
crates/s3/: Cargo.toml
crates/s3/src/: admin.rs  client.rs  lib.rs  multipart.rs
docker/: docker-compose.yml
docs/: TEST_MATRIX.md
scripts/: test-admin.sh
scripts/policies/: readonly-policy.json
