[package]
name = "rc-s3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "S3 SDK adapter for rustfs-cli"
keywords = ["s3", "aws", "storage", "object-storage"]
categories = ["filesystem", "api-bindings"]
readme = "../../README.md"

[dependencies]
# Workspace crates
rc-core = { workspace = true }

# AWS SDK
aws-sdk-s3.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-smithy-types.workspace = true
aws-smithy-runtime-api.workspace = true

# Async
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Utilities
jiff.workspace = true
bytes.workspace = true
url.workspace = true

# HTTP client for Admin API
reqwest.workspace = true
aws-sigv4.workspace = true
http.workspace = true
sha2.workspace = true
hex.workspace = true
urlencoding.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
mockall.workspace = true

